# lan-transmission

./: .gitignore  CLAUDE.md  PRD.md  index.html  package-lock.json  package.json  start-instance1.bat  start-instance2.bat  test-dual-instance.bat  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/confirm/: mod.rs  protocol.rs
src-tauri/src/discovery/: broadcaster.rs  device_registry.rs  listener.rs  mod.rs
src-tauri/src/history/: database.rs  mod.rs  models.rs
src-tauri/src/settings/: database.rs  mod.rs  models.rs
src-tauri/src/transfer/: download_handler.rs  http_server.rs  mod.rs  upload_handler.rs
src/components/ConfirmDialog/: index.tsx
src/components/DeviceList/: index.css  index.tsx
src/components/FileDropZone/: index.tsx
src/components/ReceiveHandler/: index.tsx
src/components/ReceiveHistoryHandler/: index.tsx
src/components/TextReceiveDialog/: index.tsx
src/components/TextSender/: index.tsx
src/components/TransferProgress/: index.tsx
src/components/UploadHandler/: index.tsx
src/hooks/: useDeviceDiscovery.ts  useTransferListener.ts
src/pages/History/: index.tsx
src/pages/Home/: index.tsx
src/pages/Settings/: index.tsx
src/services/: transfer.ts
src/stores/: deviceStore.ts  historyStore.ts  settingsStore.ts  transferStore.ts
src/styles/: global.css
src/types/: index.ts
